--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,9 @@ design/pandas.png
 gui/images/Architecture.png
 gui/images/Untitled Diagram.drawio
 gui/images/Architecture.png
+engine/slackapp_env.py
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/modules.xml
+.idea/incident-manager.iml
+.idea/vcs.xml
