--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "pandas": "1.1.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
-    "python-shell": "^1.0.7"
+    "python-shell": "^1.0.7",
+    "slackclient":"2.9.1",
+    "requests":"2.24.0"
   }
 }
