--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ engine/resizedTrainingImages/0/.DS_Store
 engine/resizedTrainingImages/1/.DS_Store
 engine/TestImages/.DS_Store
 engine/trainingImages/1/.DS_Store
+*.pyc
